[gd_scene format=3 uid="uid://cw0t45ug28tga"]

[ext_resource type="Script" uid="uid://b0y4sobmyjspq" path="res://scripts/main_menu.gd" id="1_vgabw"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_spmat"]
sky_top_color = Color(0.09900001, 0.28691673, 0.55, 1)
sky_horizon_color = Color(0.6629216, 0.6891689, 0.17501381, 1)
sky_energy_multiplier = 2.0
sky_cover_modulate = Color(0.8362401, 0.51149136, 0.091232605, 1)
ground_horizon_color = Color(0.9637994, 0.5533655, 0.09069619, 1)

[sub_resource type="Sky" id="Sky_s5j47"]
sky_material = SubResource("ProceduralSkyMaterial_spmat")

[sub_resource type="Environment" id="Environment_0ettg"]
background_mode = 2
background_energy_multiplier = 0.6
sky = SubResource("Sky_s5j47")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_spmat"]
albedo_color = Color(0.5705418, 0.33949167, 0.057097085, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0ettg"]
albedo_color = Color(0.115, 0.46, 0.18975002, 1)

[node name="MainMenu" type="Node3D" unique_id=1394527223]
script = ExtResource("1_vgabw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=1599240753]
environment = SubResource("Environment_0ettg")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=64766949]
transform = Transform3D(-0.90943223, 0.36013862, -0.20792606, 2.7805946e-08, 0.49999994, 0.8660255, 0.41585225, 0.78759146, -0.45471606, -7.297886, 20.759865, -54.782143)
light_color = Color(0.84, 0.574, 0, 1)
light_energy = 1.695
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="." unique_id=1384787208]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.555796, 5.7588263)
fov = 90.0

[node name="UI" type="CanvasLayer" parent="." unique_id=2108186916]

[node name="MarginContainer" type="MarginContainer" parent="UI" unique_id=461505782]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer" unique_id=342106077]
layout_mode = 2

[node name="LeftHBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/HBoxContainer" unique_id=1664491808]
layout_mode = 2
size_flags_horizontal = 3

[node name="MiddleHBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/HBoxContainer" unique_id=538504543]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/HBoxContainer/MiddleHBoxContainer" unique_id=2121508459]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UI/MarginContainer/HBoxContainer/MiddleHBoxContainer/VBoxContainer" unique_id=1853002556]
layout_mode = 2
text = "Save Kakapo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="UI/MarginContainer/HBoxContainer/MiddleHBoxContainer/VBoxContainer" unique_id=1467579387]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="UI/MarginContainer/HBoxContainer/MiddleHBoxContainer/VBoxContainer/ButtonsContainer" unique_id=857776692]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="UI/MarginContainer/HBoxContainer/MiddleHBoxContainer/VBoxContainer/ButtonsContainer" unique_id=648328990]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="Strom" type="CSGCylinder3D" parent="UI/MarginContainer/HBoxContainer/MiddleHBoxContainer/VBoxContainer/ButtonsContainer/QuitButton" unique_id=145986081]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1455492, 1.4192171, -0.8487272)
use_collision = true
radius = 0.3
height = 2.5187988
material = SubResource("StandardMaterial3D_spmat")

[node name="CSGSphere3D" type="CSGSphere3D" parent="UI/MarginContainer/HBoxContainer/MiddleHBoxContainer/VBoxContainer/ButtonsContainer/QuitButton/Strom" unique_id=1629885707]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.028789282, 2.0800302, -0.0745976)
radius = 1.405
material = SubResource("StandardMaterial3D_0ettg")

[node name="VersionLabel" type="Label" parent="UI/MarginContainer/HBoxContainer/MiddleHBoxContainer/VBoxContainer" unique_id=1353292862]
unique_name_in_owner = true
layout_mode = 2
text = "Version: 1.0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightHBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/HBoxContainer" unique_id=1609631430]
layout_mode = 2
size_flags_horizontal = 3

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="." unique_id=2043615736]

[node name="FloorCSGBox3D" type="CSGBox3D" parent="CSGCombiner3D" unique_id=1538597166]
size = Vector3(15, 0.5, 15)

[node name="Strom" type="CSGCylinder3D" parent="CSGCombiner3D" unique_id=274488700]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.3762565, 1.4384866, -3.5480328)
use_collision = true
radius = 0.3
height = 2.5187988
material = SubResource("StandardMaterial3D_spmat")

[node name="CSGSphere3D" type="CSGSphere3D" parent="CSGCombiner3D/Strom" unique_id=458519451]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.028789282, 2.0800302, -0.0745976)
radius = 1.405
material = SubResource("StandardMaterial3D_0ettg")

[node name="Strom3" type="CSGCylinder3D" parent="CSGCombiner3D" unique_id=1297019102]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5330963, 1.4384866, -3.5480328)
use_collision = true
radius = 0.3
height = 2.5187988
material = SubResource("StandardMaterial3D_spmat")

[node name="CSGSphere3D" type="CSGSphere3D" parent="CSGCombiner3D/Strom3" unique_id=891905150]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.028789282, 2.0800302, -0.0745976)
radius = 1.405
material = SubResource("StandardMaterial3D_0ettg")

[node name="Strom2" type="CSGCylinder3D" parent="CSGCombiner3D" unique_id=854630388]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.42925453, 1.0810163, -3.5480328)
use_collision = true
radius = 0.3
height = 1.985
material = SubResource("StandardMaterial3D_spmat")

[node name="CSGSphere3D" type="CSGSphere3D" parent="CSGCombiner3D/Strom2" unique_id=1375847586]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.028789282, 1.8654468, -0.0745976)
radius = 1.0
material = SubResource("StandardMaterial3D_0ettg")
